[package]
name = "price-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre = "0.6"
tokio = { version = "1.18", features = ["macros", "rt-multi-thread"] }
ethers = { version = "0.17.0", features = ["abigen"] }
bigdecimal = { version = "0.3.0" }

[build-dependencies]
eyre = "0.6"
ethers = { version = "0.17.0", features = ["abigen"] }
