[package]
name = "price-rs"
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["0xbe1 <0xbetrue@gmail.com>"]
description = "Price all ERC20 tokens."
repository = "https://github.com/0xbe1/price-rs"
readme = "README.md"

[dependencies]
eyre = "0.6"
tokio = { version = "1.18", features = ["macros", "rt-multi-thread"] }
ethers = { version = "0.17.0", features = ["abigen"] }
bigdecimal = "0.3.0"
serde_json = "1.0"
toml = "0.5"
serde = "1.0"

[build-dependencies]
eyre = "0.6"
ethers = { version = "0.17.0", features = ["abigen"] }
